@@ -30,8 +30,10 @@ Math::BigLite:
  * stray new() calls to $class->new()
  * routines now use _upgrade_x() to check params and overflow
  * round() works now
-2002-03-23 v0.08 Tels
+2002-03-25 v0.08 Tels
  * config() was missing
+ * fixed isa() (we arent a BigInt, nor a BigFloat nor a BigRat)
+ * ficed bdiv() to upgrade when Math::BigInt upgrade is set
 
 Please send me test-reports, your experiences with this and your ideas - I love
 to hear about my work!
